--- a/app/views/store/index.html.haml
+++ b/app/views/store/index.html.haml
@@ -14,4 +14,8 @@
 					%h2= product.name
 					%p= sanitize(product.summary)
 					%hr
-					%h4= number_to_currency(product.price)
+					.row
+						.small-6.large-10.columns
+							= button_to 'Add to Cart', line_items_path(product_id: product)
+						.small-6.large-2.columns
+							%h4= number_to_currency(product.price)
