--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,15 +1,15 @@
 !!!
-%html{:lang => “en"}
+%html{:lang => 'en'}
   %head
-    %meta{:charset => "utf-8"}/
-    %meta{:content => "width=device-width, initial-scale=1.0", :name => “viewport"}/
-    %title= content_for?(:title) ? yield(:title) : "The Shop”
-    = stylesheet_link_tag    “application"
-    = javascript_include_tag "vendor/modernizr"
-    = javascript_include_tag "application"
+    %meta{:charset => 'utf-8'}
+    %meta{:content => 'width=device-width, initial-scale=1.0', :name => 'viewport'}
+    %title= content_for?(:title) ? yield(:title) : 'The Shop'
+    = stylesheet_link_tag    'application'
+    = javascript_include_tag 'vendor/modernizr'
+    = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
-    =render "layouts/navigation"
+    =render 'layouts/navigation'
     %br
     .row
       .small-3.columns
