--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,9 +12,9 @@
     =render 'layouts/navigation'
     %br
     .row
-      .small-3.columns
-        %br
-      .small-6.columns
+      .small-12.large-9.columns
         = yield
-      .small-3.columns
-        %br
+      .small-12.large-3.columns
+        - if @cart
+          = hidden_div_if(@cart.line_items.empty?, id: 'cart') do
+            = render @cart
