--- a/app/views/store/index.html.haml
+++ b/app/views/store/index.html.haml
@@ -19,3 +19,5 @@
 							= button_to 'Add to Cart', line_items_path(product_id: product), remote: true
 						.small-6.large-2.columns
 							%h4= number_to_currency(product.price)
+
+= will_paginate @products
